[gd_scene load_steps=65 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Tile.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0.505882, 0.611765, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 10, 2, 10 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 5, 1, 5 )

[sub_resource type="SpatialMaterial" id=16]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=17]
resource_local_to_scene = true
material = SubResource( 16 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=18]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=19]
resource_local_to_scene = true
material = SubResource( 18 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=20]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=21]
resource_local_to_scene = true
material = SubResource( 20 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=22]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=23]
resource_local_to_scene = true
material = SubResource( 22 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=24]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=25]
resource_local_to_scene = true
material = SubResource( 24 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=26]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=27]
resource_local_to_scene = true
material = SubResource( 26 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=28]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=29]
resource_local_to_scene = true
material = SubResource( 28 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=30]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=31]
resource_local_to_scene = true
material = SubResource( 30 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=32]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=33]
resource_local_to_scene = true
material = SubResource( 32 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=34]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=35]
resource_local_to_scene = true
material = SubResource( 34 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=36]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=37]
resource_local_to_scene = true
material = SubResource( 36 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=38]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=39]
resource_local_to_scene = true
material = SubResource( 38 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=40]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=41]
resource_local_to_scene = true
material = SubResource( 40 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=42]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=43]
resource_local_to_scene = true
material = SubResource( 42 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=44]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=45]
resource_local_to_scene = true
material = SubResource( 44 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=46]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=47]
resource_local_to_scene = true
material = SubResource( 46 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=48]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=49]
resource_local_to_scene = true
material = SubResource( 48 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=50]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=51]
resource_local_to_scene = true
material = SubResource( 50 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=52]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=53]
resource_local_to_scene = true
material = SubResource( 52 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=54]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=55]
resource_local_to_scene = true
material = SubResource( 54 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=56]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=57]
resource_local_to_scene = true
material = SubResource( 56 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=58]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=59]
resource_local_to_scene = true
material = SubResource( 58 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=60]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=61]
resource_local_to_scene = true
material = SubResource( 60 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=62]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=63]
resource_local_to_scene = true
material = SubResource( 62 )
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=64]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.666667 )

[sub_resource type="QuadMesh" id=65]
resource_local_to_scene = true
material = SubResource( 64 )
size = Vector2( 2, 2 )

[sub_resource type="CapsuleMesh" id=4]
radius = 0.4

[sub_resource type="CapsuleShape" id=6]
radius = 0.4

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("MeshInstance/Viewport")

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
albedo_texture = SubResource( 12 )

[sub_resource type="PlaneMesh" id=7]
resource_local_to_scene = true
material = SubResource( 13 )
size = Vector2( 50, 50 )

[sub_resource type="Shader" id=10]
code = "//shader_type canvas_item;
//
//void fragment() {
//    float aspect = (1.0 / SCREEN_PIXEL_SIZE).y / (1.0 / SCREEN_PIXEL_SIZE).x;
//    float value;
//    vec2 uv = FRAGCOORD.xy.xy / (1.0 / SCREEN_PIXEL_SIZE).x;
//    uv -= vec2(0.5, 0.5 * aspect);
//
//    float rot = radians(45.0);
//    float s = sin(rot);
//    float c = cos(rot);
//
//    float newX = uv.x * c - uv.y * s;
//    float newY = uv.x * s + uv.y * c;
//
//    uv = vec2(newX, newY);
//
//    uv += vec2(0.5, 0.5 * aspect);
//    uv.y += 0.5 * (1.0 - aspect);
//
//    vec2 pos = 10.0 * uv;
//    vec2 rep = fract(pos);
//    float dist = 2.0 * min(min(rep.x, 1.0 - rep.x), min(rep.y, 1.0 - rep.y));
//    float squareDist = length((floor(pos) + vec2(0.5)) - vec2(5.0));
//
//    float edge = sin(TIME - squareDist * 0.5) * 0.5 + 0.5;
//    edge = (TIME - squareDist * 0.5) * 0.5;
//    edge = 2.0 * fract(edge * 0.5);
//
//    value = fract(dist * 2.0);
//    value = mix(value, 1.0 - value, step(1.0, edge));
//    edge = pow(abs(1.0 - edge), 2.0);
//    value = smoothstep(edge - 0.05, edge, 0.95 * value);
//    value += squareDist * 0.1;
//
//    COLOR = mix(vec4(1.0, 1.0, 1.0, 1.0), vec4(0.5, 0.75, 1.0, 1.0), value);
//    COLOR.a = 0.25 * clamp(value, 0.0, 1.0);
//}

shader_type canvas_item;
render_mode blend_mix,unshaded;

uniform float transparency : hint_range(0, 1) = 1.0;

uniform vec4 color0 : hint_color;
uniform vec4 color1 : hint_color;
uniform vec4 color2 : hint_color;
uniform vec4 color3 : hint_color;
uniform vec4 color4 : hint_color;
uniform vec4 color5 : hint_color;

uniform vec2 Direction1 = vec2(1, 0); 
uniform vec2 Direction2 = vec2(1, 1); 
uniform float Speed1 = 0.08;
uniform float Speed2 = 0.08;
uniform sampler2D noise;
uniform int pixel_size;

uniform float heatAmplitude : hint_range(0.0, 0.15);
uniform float heatPeriod;
uniform float heatPhaseShift;
uniform float heatUpperLimit : hint_range(0.5, 10.0);

vec4 get_pixelated_moving_colors(vec2 uv, vec2 direction, float speed) {
	speed = speed / 1000.0;
	vec2 moving_uv = uv + (direction * TIME * speed);
	vec2 pixel_uv = round((moving_uv) * float(pixel_size)) / float(pixel_size);
	vec4 pixelated_color = texture(noise, pixel_uv);
	return pixelated_color;
}

bool is_in_threshold(vec4 old_color, float threshold_low, float threshold_hi){
	if(threshold_low <= old_color.r + old_color.g + old_color.b && old_color.r + old_color.g + old_color.b < threshold_hi) {
        return true;
    } else {
		return false;
	}
}

vec4 smooth_extreme_colors(vec4 color) {
	// Lower numbers are darker
	float threshold_1 = 1.7;
	float threshold_2 = 1.9;
	float threshold_3 = 2.2;
	float threshold_4 = 2.25;
	float threshold_5 = 2.3;
	// Dark to light
	if (is_in_threshold(color, 0, threshold_1)) {
        color = color0;
    } else if (is_in_threshold(color, threshold_1, threshold_2)) {
        color = color1;
    } else if (is_in_threshold(color, threshold_2, threshold_3)) {
        color = color2;
    } else if (is_in_threshold(color, threshold_3, threshold_4)) {
        color = color3;
	} else if (is_in_threshold(color, threshold_4, threshold_5)) {
        color = color4;
    } else if (is_in_threshold(color, threshold_5, 3.0)) {
        color = color5;
    }
	
	return color;
}


void fragment(){
	
	vec4 pixelated_color = .5 * get_pixelated_moving_colors(UV, Direction1, Speed1);
	pixelated_color += .5 * get_pixelated_moving_colors(UV, Direction2, Speed2);
	vec4 smoothed_color = smooth_extreme_colors(pixelated_color);
	
	COLOR = smoothed_color * transparency;

}"

[sub_resource type="OpenSimplexNoise" id=14]
seed = 10
octaves = 8
period = 69.6
persistence = 0.667

[sub_resource type="NoiseTexture" id=15]
width = 1000
seamless = true
noise = SubResource( 14 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/transparency = 1.0
shader_param/color0 = Color( 0.447059, 0.972549, 0.921569, 1 )
shader_param/color1 = Color( 0.32549, 0.701961, 0.67451, 1 )
shader_param/color2 = Color( 0.156863, 1, 0.701961, 1 )
shader_param/color3 = Color( 0.00392157, 1, 1, 1 )
shader_param/color4 = Color( 0, 0.505882, 1, 1 )
shader_param/color5 = Color( 0.00784314, 0.0705882, 1, 1 )
shader_param/Direction1 = Vector2( 1, 0 )
shader_param/Direction2 = Vector2( 1, 1 )
shader_param/Speed1 = 10.0
shader_param/Speed2 = 20.0
shader_param/pixel_size = 1000
shader_param/heatAmplitude = 0.15
shader_param/heatPeriod = 10.0
shader_param/heatPhaseShift = 10.0
shader_param/heatUpperLimit = 10.0
shader_param/noise = SubResource( 15 )

[node name="Field" type="Spatial"]

[node name="Plateau" type="MeshInstance" parent="."]
mesh = SubResource( 2 )

[node name="StaticBody2" type="StaticBody" parent="Plateau"]

[node name="CollisionShape" type="CollisionShape" parent="Plateau/StaticBody2"]
shape = SubResource( 5 )

[node name="Tiles" type="Spatial" parent="Plateau"]

[node name="Tile1" parent="Plateau/Tiles" instance=ExtResource( 2 )]
mesh = SubResource( 17 )

[node name="Tile2" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 1.001, -4 )
mesh = SubResource( 19 )

[node name="Tile3" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.001, -4 )
mesh = SubResource( 21 )

[node name="Tile4" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2, 1.001, -4 )
mesh = SubResource( 23 )

[node name="Tile5" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, 1.001, -4 )
mesh = SubResource( 25 )

[node name="Tile6" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4, 1.001, -2 )
mesh = SubResource( 27 )

[node name="Tile7" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 1.001, -2 )
mesh = SubResource( 29 )

[node name="Tile8" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.001, -2 )
mesh = SubResource( 31 )

[node name="Tile9" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2, 1.001, -2 )
mesh = SubResource( 33 )

[node name="Tile10" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, 1.001, -2 )
mesh = SubResource( 35 )

[node name="Tile11" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4, 1.001, 0 )
mesh = SubResource( 37 )

[node name="Tile12" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 1.001, 0 )
mesh = SubResource( 39 )

[node name="Tile13" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.001, 0 )
mesh = SubResource( 41 )

[node name="Tile14" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2, 1.001, 0 )
mesh = SubResource( 43 )

[node name="Tile15" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, 1.001, 0 )
mesh = SubResource( 45 )

[node name="Tile16" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4, 1.001, 2 )
mesh = SubResource( 47 )

[node name="Tile17" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 1.001, 2 )
mesh = SubResource( 49 )

[node name="Tile18" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.001, 2 )
mesh = SubResource( 51 )

[node name="Tile19" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2, 1.001, 2 )
mesh = SubResource( 53 )

[node name="Tile20" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, 1.001, 2 )
mesh = SubResource( 55 )

[node name="Tile21" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4, 1.001, 4 )
mesh = SubResource( 57 )

[node name="Tile22" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 1.001, 4 )
mesh = SubResource( 59 )

[node name="Tile23" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.001, 4 )
mesh = SubResource( 61 )

[node name="Tile24" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2, 1.001, 4 )
mesh = SubResource( 63 )

[node name="Tile25" parent="Plateau/Tiles" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, 1.001, 4 )
mesh = SubResource( 65 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="UI"]
margin_left = 877.0
margin_top = -6.0
margin_right = 1047.0
margin_bottom = 622.0
color = Color( 0, 0, 0, 0.321569 )

[node name="TrapPhase" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TrapsCount" type="Label" parent="UI/TrapPhase"]
margin_left = 898.0
margin_top = 499.0
margin_right = 1012.0
margin_bottom = 530.0
text = "Traps Set:
0 / 3"
align = 1

[node name="SetTraps" type="Button" parent="UI/TrapPhase"]
margin_left = 902.0
margin_top = 544.0
margin_right = 1007.0
margin_bottom = 574.0
mouse_default_cursor_shape = 2
text = "Set Traps"

[node name="Revert" type="Button" parent="UI/TrapPhase"]
margin_left = 902.0
margin_top = 455.0
margin_right = 1007.0
margin_bottom = 485.0
mouse_default_cursor_shape = 2
text = "Revert"

[node name="TrapPrompt" type="Label" parent="UI/TrapPhase"]
margin_left = 876.0
margin_top = 284.0
margin_right = 1035.0
margin_bottom = 320.0
text = "Press SPACE to
set trap"
align = 1

[node name="MinePhase" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="UI/MinePhase"]
margin_left = 898.0
margin_top = 499.0
margin_right = 1012.0
margin_bottom = 530.0
text = "Your score:
0"
align = 1

[node name="StopMining" type="Button" parent="UI/MinePhase"]
margin_left = 902.0
margin_top = 544.0
margin_right = 1007.0
margin_bottom = 574.0
mouse_default_cursor_shape = 2
text = "Stop Mining"

[node name="MinePrompt" type="Label" parent="UI/MinePhase"]
margin_left = 876.0
margin_top = 284.0
margin_right = 1035.0
margin_bottom = 320.0
text = "Press SPACE to
deploy miner"
align = 1

[node name="MineTimer" type="Label" parent="UI/MinePhase"]
visible = false
margin_left = 876.0
margin_top = 333.0
margin_right = 1035.0
margin_bottom = 369.0
text = "0"
align = 1

[node name="Overlay" type="ColorRect" parent="UI"]
visible = false
margin_right = 1085.0
margin_bottom = 627.0
color = Color( 0, 0, 0, 0.262745 )

[node name="Background" type="ColorRect" parent="UI/Overlay"]
margin_left = 331.0
margin_top = 190.0
margin_right = 710.0
margin_bottom = 430.0
color = Color( 0, 0, 0, 1 )

[node name="Waiting" type="Label" parent="UI/Overlay"]
margin_left = 419.0
margin_top = 301.0
margin_right = 628.0
margin_bottom = 352.0
text = "You hit a trap..."
align = 1

[node name="StopMining" type="Button" parent="UI/Overlay"]
visible = false
margin_left = 463.0
margin_top = 351.0
margin_right = 568.0
margin_bottom = 381.0
mouse_default_cursor_shape = 2
text = "Stop Mining"

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0 )
mesh = SubResource( 7 )

[node name="Viewport" type="Viewport" parent="MeshInstance"]
size = Vector2( 1000, 1000 )

[node name="ColorRect" type="ColorRect" parent="MeshInstance/Viewport"]
material = SubResource( 11 )
margin_right = 2000.0
margin_bottom = 2000.0
